# hospital-bulk-processor

hospital-bulk-processor/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  sample.csv
hospital-bulk-processor/app/: __init__.py  celeryconfig.py  main.py  worker.py
hospital-bulk-processor/app/core/: config.py  redis.py
hospital-bulk-processor/app/models/: __init__.py  schemas.py
hospital-bulk-processor/app/routers/: bulk.py
hospital-bulk-processor/app/services/: bulk_service.py  csv_validator.py
hospital-bulk-processor/app/tasks/: activate_batch.py  common.py  create_hospital.py  orchestrator.py  resume.py
hospital-bulk-processor/outputs/live-test-evidence/: Hospital_Bulk_Processor_Live_Test_Report.xlsx
hospital-bulk-processor/tests/: __init__.py  conftest.py  test_bulk_upload.py  test_csv_validation.py  test_infrastructure.py  test_partial_failures.py  test_progress.py  test_resume.py
